Fixed issue with spacing

--- a/src/scss/_portfolio.scss
+++ b/src/scss/_portfolio.scss
@@ -65,6 +65,11 @@ $portfolio-items-cols-xl: 4;
       display: block;
       height: 0.01px;
     }
+
+    .portfolio-items__container {
+      margin-top: 0;
+      padding-top: $portfolio-items-gutter-between / 2;
+    }
   }
 
   &__container {
@@ -73,19 +78,15 @@ $portfolio-items-cols-xl: 4;
     max-width: $portfolio-items-max-width;
     margin-left: -$portfolio-items-gutter-between / 2;
     margin-right: -$portfolio-items-gutter-between / 2;
+    margin-top: -$portfolio-items-gutter-between / 2;
     overflow-x: hidden;
-    // padding-top: $portfolio-items-gutter-between / 2;
+    padding-top: 0;
 
     // Center horizontally when max-size is reached
     @media (min-width:$portfolio-items-max-width) {
       position: relative;
       left: 50%;
       transform: translateX(-50%);
-    }
-
-    &:first-child {
-      margin-top: -$portfolio-items-gutter-between / 2;
-      // padding-top: 0;
     }
   }
 
